# yaad

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0358b0c32116_add_streaming_links_cache.py  2bdee57dc322_add_youtube_integration_fields.py  37a8f8eefd45_add_youtube_playlist_id.py  4752856bc81c_add_recommendations_table.py  48b9f9ffge56_add_youtube_playlist_item_id.py  490cd92359d0_add_new_media_types.py  5863967cd92d_add_genre_name_to_recommendations.py  6fd1af1d4d9f_add_book_ownership_fields_and_.py  944ec3441d78_add_current_episode_to_media.py  9d33dbf9223a_increase_kobo_user_key_column_size.py  a1b2c3d4e5f6_add_additional_performance_indexes.py  b0d2f998d79a_add_extended_media_metadata.py  b1b57cea3bca_add_tmdb_rating_to_recommendations.py  b2c3d4e5f6a7_add_letterboxd_slug.py  b51f48afdfff_initial_models.py  b94c8bb0f23f_add_kobo_integration_columns_to_users_.py  bcb247d1d9dc_change_budget_and_revenue_to_bigint.py  c2a3b4d5e6f7_add_google_oauth_support.py  c3d4e5f6g7h8_add_jellyfin_integration_fields.py  ccb480d0491c_add_letterboxd_username_to_users.py  d3e4f5g6h7i8_extend_avatar_url_length.py  e9240c5c0156_add_user_streaming_preferences.py  e99ef9741126_add_compound_indexes_for_performance.py  f1g2h3i4j5k6_add_streaming_to_recommendations.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
scripts/: backfill_letterboxd_slugs.py  cleanup_and_enrich.py  cleanup_duplicates_and_dead_videos.py  enrich_series_creators.py  enrich_series_media.py  enrich_youtube_media.py  fix_letterboxd_series.py  populate_streaming_links.py  rebuild_incomplete.py
src/: __init__.py  config.py  constants.py  main.py
src/api/: __init__.py  auth.py  imports.py  jellyfin.py  kobo.py  media.py  recommendations.py  router.py  search.py  stats.py  user.py
src/auth/: __init__.py  dependencies.py  models.py  oauth.py
src/db/: __init__.py  database.py
src/i18n/: __init__.py  en.json  fr.json
src/models/: __init__.py  base.py  book.py  film.py  media.py  recommendation.py  schemas.py  user.py  youtube.py
src/utils/: __init__.py  cache.py  http_client.py  logging.py  metrics.py  pagination.py  (+3 more)
static/: manifest.json  sw.js
templates/: base.html  offline.html
tests/: conftest.py  test_api_auth.py  test_api_imports.py  test_api_jellyfin.py  test_api_media.py  test_api_search.py  test_api_stats.py  test_api_user.py  test_crud_media.py  test_health.py
(+49 files in other folders)
